SUMMARY STEPS TO REPRODUCE 1. Create new project 2. Select Task editor view 3. Open Settings->Dockers OBSERVED RESULT Only View Selector shown All view specific fockers missing SOFTWARE/OS VERSIONS Windows: macOS: Linux/KDE Plasma: (available in About System) KDE Plasma Version: KDE Frameworks Version: Qt Version: ADDITIONAL INFORMATION
Git commit 5dac83b222adb0ea92efe9df3a2a4689cb75177c by Dag Andersen. Committed on 19/11/2019 at 07:56. Pushed by danders into branch '3.2'. Bug 414164 - View specific dockers not shown in Settings->Dockers Docker activation got the wrong action collection when there was multiple views on a document. FIXED-IN: 3.2.1 M +8 -12 src/libs/ui/kptviewbase.cpp https://commits.kde.org/calligraplan/5dac83b222adb0ea92efe9df3a2a4689cb75177c
Git commit 1aaabc507c607d2354f4ed417a25edaef6b8f105 by Dag Andersen. Committed on 19/11/2019 at 08:00. Pushed by danders into branch 'master'. Bug 414164 - View specific dockers not shown in Settings->Dockers Docker activation got the wrong action collection when there was multiple views on a document. FIXED-IN: 3.2.1 M +8 -12 src/libs/ui/kptviewbase.cpp https://commits.kde.org/calligraplan/1aaabc507c607d2354f4ed417a25edaef6b8f105