Bug 414164 - View specific dockers not shown in Settings->Dockers

Docker activation got the wrong action collection when
there was multiple views on a document.

BUG: 414164
FIXED-IN: 3.2.1